Fix size on mobile and add collision reaction.

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@
 
 html {
     font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
 }
 
 body {
@@ -29,7 +32,10 @@ body {
     overflow: hidden;
     transition: 0.3s ease;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100%;
+    flex-grow: 1;
 }
 
 #game {
@@ -321,7 +327,7 @@ button:hover {
 #container {
     border: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 @media only screen and (min-width: 600px) {
